<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="titleName">绵阳移动办公 android</string>
    <string name="register_tip">提示 \n带*项为必填项\n填写手机号方便您找回密码以及了解更多信息</string>
    <string name="login">登 录</string>
    <string name="account">输入手机号码</string>
    <string name="password">输入密码</string>
    <string name="login_prompt">正在验证帐号…</string>
    <string name="auto_save_password">记住密码</string>
    <string name="revisePublicPerson">修改信息</string>
    <string name="qr_register">会员注册</string>
    <string name="register2">注册新账号</string>
    <string name="password_text">密码管理</string>
    <string name="more_login_setting">更多登录选项</string>
    <string name="sending_request">正在登录</string>
    <string name="index_title">绵阳移动OA</string>
    <string name="back_info">back</string>
    <string name="explorer">Explorer</string>
    <string name="dialog_read_from_dir">选择文件</string>
    <string name="my_groups">个人通讯录</string>
    <string name="pub_groups">公共通讯录</string>
    <string name="export">导出</string>
    <string name="new_contact">新建</string>
    <string name="zhuanyi">转移</string>
    <string name="daoru">导入</string>
    <string name="OK">确定</string>
    <string name="name">姓名</string>
    <string name="birth">生日</string>
    <string name="city">城市</string>
    <string name="firstName">姓氏：</string>
    <string name="lastName">名字：</string>
    <string name="phone">手机：</string>
    <string name="new_contacts">新建联系人</string>
    <string name="select_group">选择群组</string>
    <string name="export_contacts">导出联系人</string>
    <string name="daoru_contacts">导入联系人</string>
    <string name="zhuanyi_contacts">分组转移</string>
    <string name="news_center">新闻中心</string>
    <string name="write_news">写新闻</string>
    
    <string name="contacts">通讯录</string>
    <string name="scard_in">从存储卡内导入</string>
    <string name="sim_in">从SIM卡内导入</string>
    <string name="scard_out">导出到存储卡</string>
    <string name="sim_out">导出到SIM卡</string>
    <string name="app_name">MYMOS</string>
    <string name="personName"></string>
    
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">新密码</string>
      
    <string name="action_settings">Settings</string>
    <string name="back_home_page1">返回首页</string>
    <string name="back_message1">返回短信管理</string>
    <string name="back_message2">返回短信管理</string>
    <string name="back_message3">返回短信管理</string>
    <string name="back_message4">返回短信管理</string>
    <string name="send_message_icon">“发送短信“图标</string>
    <string name="my_message_icon">“我的短信“图标</string>
    <string name="next_icon">“下一页“图标</string>
    <string name="send_icon">“发送“图标</string>
    <string name="add_receiver_icon">添加收信人图标</string>
    <string name="message_manage">短信管理</string>
    <string name="process_manage">流程管理</string>
    <string name="add_accessory">添加附件</string>
    <string name="my_phone_message">我的短信</string>
    <string name="my_inner_message">我的短信</string>
    <string name="send_phone_message">发送短信</string>
    <string name="write_phone_message">写短信</string>
    <string name="write_inner_message">写内部信</string>
    <string name="send_inner_message">发送短信</string>
    <string name="start_time">起始时间</string>
    <string name="transmit_m">转发</string>
    <string name="end_line">结束时间</string>
    <string name="sender">发信人</string>
    <string name="receiver">收信人</string>
    <string name="route">附件路径</string>
    <string name="announcement_manage">公告管理</string>
    <string name="user">用户名</string>
    <string name="register">注册账号</string>
    <string name="find_password">忘记密码？找回密码</string>
    <string name="newUser">还未注册？注册账号</string>
    <string name="phone_message_manage">手机短信管理</string>
    <string name="inner_message_manage">内部短信管理</string>
    <string name="sendButton">发送</string>
    <string name="set_clock">定时发送</string>
    <string name="query_way"></string>
    <string name="click">点击</string>
    <string name="contact_detail">联系人信息</string>
    <string name="modify">修改</string>
    
    <string name="announcement">公告</string>
    <string name="create_announcement">创建公告</string>
    <string name="issue_announcement">发布公告</string>
    <string name="draftAnnouncement">公告草稿</string>
    <string name="title">标题</string>
    <string name="scope">发布范围</string>
    <string name="validDate">有效期</string>
    <string name="attibute">属性</string>
    <string name="draft">草稿</string>
    <string name="issue">发布</string>
    <string name="end">终止</string>
    <string name="delete">删除</string>
    <string name="remindWay">提醒方式</string>
    <string name="input_announs_name">请输入公告标题</string>
    <string name="phone_remind">手机短信</string>
    <string name="inner_remind">内部短信</string>
    <string name="submit">添加</string>
    <string name="cancle">取消</string>
    <string name="add_appendix">添加附件</string>
    <string name="display">查看</string>

    <string name="document">我的文档</string>
     <string name="file_info_location">位置:</string>
    <string name="file_info_size">大小:</string>
    <string name="file_info_modified">时间:</string>
    <string name="file_info_canread">可读:</string>
    <string name="file_info_canwrite">可写:</string>
    <string name="file_info_ishidden">隐藏:</string>
    <string name="operation_share">共享</string>
    <string name="operation_edit">编辑</string>
    <string name="operation_send">发送</string>
    <string name="operation_rename">重命名</string>
    <string name="operation_delete">删除</string>
    <string name="operation_info">日志</string>
    <string name="operation_cancel">取消</string>
	<string name="key_word">关键字</string>
	<string name="change_time">修改时间</string>
	<string name="content">目录</string>
	<string name="creater">创建人</string>
    <string name="share">共享文档</string>
    <string name="share_way">共享方式</string>
    <string name="doc_name">文档名</string>
    <string name="new_public_doc">新建公共文档</string> 
    <string name="new_person_doc">新建个人文档</string> 
    <string name="doc_formwork">文档模板</string>
    <string name="doc_style">文档样式</string>  
    <string name="new_doc_style">新样式</string>  
    <string name="new_doc_formwork">新模板</string>
    <string name="formwork">模板</string>
    <string name="style">样式</string>    
    <string name="doc_save">保存</string> 
    <string name="fill_name">填写文档名</string> 
    <string name="fill_accessory_notice">填写附件说明</string> 
    <string name="fill_doc_notice">请填写文档内容</string>
    
    
    <string name="new_process">新流程</string>
    <string name="new_form">新表单</string>
    <string name="new_category">新类别</string>
    <string name="new_entrust">新委托</string>
    <string name="process_monitor">流程监控</string>
    <string name="process_query">流程查询</string>
    <string name="process_configuration">流程配置</string>
    <string name="process_entrust">流程委托</string>
    <string name="leave">请假类</string>
    <string name="administration">行政事务类</string>
	<string name="check">流程委托类</string>
	<string name="submit_apply_button">提交申请</string>
	<string name="submit_form_button">生成表单</string>
	<string name="word_notice">申请流程请填写：</string>
	<string name="select_category">选择类型</string>
	<string name="phone_num">手机号</string>
	<string name="detail_process">流程详情</string>
	<string name="a_process_name">流程名</string>
	<string name="apply_time">申请时间</string>
	<string name="end_time">截止时间</string>
	<string name="apply_person">申请人</string>
	<string name="first_step">第一步</string>
	<string name="second_step">第二步</string>
	<string name="done">完成</string>
	<string name="undone">未完</string>
	<string name="submit_category_button">提交类别</string>
	<string name="category_name">类别名</string>
	<string name="category_notice">类别描述</string>
	<string name="submit_entrust_button">提交委托</string>
	<string name="entrust_name">委托流程</string>
	<string name="entrust_person">委托人</string>
	<string name="entrusted_person">被委托人</string>
	<string name="entrust_time">委托时间</string>
	<string name="entrust_notice">委托详述</string>
	
	<string name="to_do">待办事宜</string>
	<string name="finish">已办事宜</string>
	<string name="done_matter">办结事宜</string>
	<string name="createNewsType">新建新闻类型</string>
	<string name="newsType">新闻类型</string>
	<string name="typeNumber">类型号:</string>
	<string name="type">类型:</string>
	<string name="sortNumber">排序号</string>
	<string name="cancel">取消</string>
	<string name="newsTitle">新闻标题</string>
	<string name="newsContent">新闻正文</string>
	<string name="isTop">置顶</string>
	<string name="isComment">评论</string>
	<string name="newsDetail">新闻详情</string>
	<string name="newsList">新闻列表</string>
	<string name="newsComment">新闻评论</string>
	<string name="comment">评论</string>
	
</resources>