<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_contact" >

    <TextView
        android:id="@+id/addNewsTypeLable"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/title_bar"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/createNewsType"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rlTypeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="80dp" >

        <TextView
            android:id="@+id/label_NewType"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_NewsType"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/label_NewType"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/label_NewType"
            android:hint="@string/newsType"
            android:singleLine="true" />

        <TextView
            android:id="@+id/label_NewTypeNumber"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignRight="@id/label_NewType"
            android:layout_below="@id/label_NewType"
            android:layout_marginTop="20dp"
            android:text="@string/typeNumber"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_NewsTypeNumber"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/label_NewTypeNumber"
            android:layout_alignLeft="@id/input_NewsType"
            android:hint="@string/sortNumber"
            android:inputType="numberSigned"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="58dp" >
    </RelativeLayout>

    <Button
        android:id="@+id/addNewsType_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/addNewsType_cancel"
        android:layout_alignParentLeft="true"
        android:text="@string/submit"
        android:textSize="24sp" />

    <Button
        android:id="@+id/addNewsType_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="31dp"
        android:text="@string/cancel"
        android:textSize="24sp" />

</RelativeLayout>