<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
      <RelativeLayout
        android:id="@+id/monitorRelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/write_news"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etNewsTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:hint="@string/newsTitle"
        android:lines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etNewsContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/btn_NewsImg"
        android:layout_below="@+id/cb_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:hint="@string/newsContent" /> 

    <Button
        android:id="@+id/btn_submitNews"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/etNewsTitle"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/submit" />

    <ImageView
        android:id="@+id/iv_NewsImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_submitNews"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <CheckBox
        android:id="@+id/cb_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etNewsTitle"
        android:layout_below="@id/etNewsTitle"
        android:text="@string/isTop"
        android:textColor="#000000" />


    <CheckBox
        android:id="@+id/cb_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewsTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/isComment"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@+id/etNewsContent"
        android:layout_alignLeft="@+id/btn_submitNews"
        android:layout_alignRight="@+id/etNewsContent"
        android:layout_below="@+id/etNewsTitle" />

    <Button
        android:id="@+id/btn_More"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/cb_top"
        android:layout_below="@+id/iv_NewsImg"
        android:layout_marginLeft="14dp"
        android:layout_toLeftOf="@+id/cb_comment"
        android:text="选择图片" />

</RelativeLayout>