<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:orientation="vertical" 
    android:id="@+id/loginpage"
    android:background="@color/chat_contact" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >
       
          <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/titleName"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </RelativeLayout>


    <LinearLayout 
        android:orientation="vertical" 
        android:id="@+id/input" 
        android:background="@drawable/shape_bg"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="28.0dip"
        android:layout_marginTop="28dip" 
        android:layout_below="@id/title"
        android:layout_marginRight="28.0dip" >
          
        <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:id="@+id/accounts" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/account" android:maxLines="1" android:maxLength="16"     android:inputType="number" />
        <View android:background="#ffc0c3c4" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="1.0px" android:layout_marginRight="1.0px" />
        <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center_vertical" android:id="@+id/password" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/password" android:maxLines="1" android:maxLength="16" android:inputType="textPassword" />
    </LinearLayout>
    

    <Button 
        android:textSize="18.0sp" 
        android:textColor="#ff333333" 
        android:gravity="center" 
        android:id="@+id/login" 
          android:background="@drawable/op_bg_selector"
        android:paddingTop="5.0dip" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="28.0dip" 
        android:layout_marginTop="12.0dip" 
        android:layout_marginRight="28.0dip" 
        android:text="@string/login"    
        android:layout_below="@id/input" />


    <RelativeLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="8.0dip" 
        android:layout_marginRight="30.0dip" 
        android:layout_below="@id/login"
        android:layout_weight="1" >
		<CheckBox android:textSize="12.0sp" android:textColor="@color/black" android:layout_alignParentLeft="true"  android:id="@+id/auto_save_password" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/auto_save_password" android:drawableLeft="@drawable/checkbox_bg1" android:drawablePadding="4.0dip"/>
		<Button  android:textSize="12.0sp" android:textColor="#ffffffff" android:layout_alignParentRight="true" android:gravity="left|center"  android:id="@+id/regist" android:background="@drawable/login_regist_bg" android:paddingLeft="8.0dip" android:paddingRight="18.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register2" />
    </RelativeLayout>
    
   
    
</RelativeLayout>
