<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/chat_contact"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cancel_addAnnounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:onClick="cancelClicked"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/ok_addAnnounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:onClick="okClicked"
            android:text="@string/OK" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_announcement"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="50.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/announcement_title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:ems="5"
                android:hint="@string/input_announs_name"
                android:lines="10"
                android:gravity="top"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="12dp"
                android:text="@string/scope"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />


            <Spinner                
                android:id="@+id/announcement_scope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="12dp"
                android:layout_weight="3"
                android:hint="请选择发布范围"
                android:maxLength="20"
                android:textColor="#ff545454"
                android:textSize="16.0sp"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dip"
                android:paddingLeft="22.0dip"
                android:text="@string/attibute"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <RadioGroup
                android:id="@+id/attibute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/issue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue"
                    android:textColor="#ff545454" />

                <RadioButton
                    android:id="@+id/draft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:checked="true"
                    android:text="@string/draft"
                    android:textColor="#ff545454" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:paddingLeft="15dip"
                android:text="@string/validDate"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:background="@android:color/white"
                android:clickable="true"
                android:hint="请输入终止日期"
                android:onClick="set_end_date"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:id="@+id/remind"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="12dp"
                android:text="@string/remindWay"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <RadioGroup
                android:id="@+id/remind_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/inner_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/inner_remind"
                    android:textColor="#ff545454" />

                <RadioButton
                    android:id="@+id/phone_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_remind"
                    android:textColor="#ff545454" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_marginTop="280dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textColor="#ff545454"
            android:cursorVisible="true"
            android:gravity="top"
            android:textSize="16.0sp" />
        
        <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:paddingBottom="1dp" >

        <Button
            android:id="@+id/add_appendix"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/add_button_bg"
            android:onClick="new_group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_appendix"
            android:layout_centerHorizontal="true"
            android:text="添加附件"
            android:textColor="@color/black" >
        </TextView>
    </RelativeLayout>

    

</RelativeLayout>